--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -10,5 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: print
-        run: ls -a
+      - name: create-vite-env
+        run: |
+          chmod 777 -R front
+          cd front
+          echo "VITE_KAKAO_API_KEY=${{ secrets.VITE_KAKAO_API_KEY }}" > ./.env
+          cat .env
