--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -8,9 +8,10 @@ jobs:
   diretory-print:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout  
+        uses: actions/checkout@v4
       
-      - name: create-vite-env
+      - name: Create-vite-env
         run: |
           chmod 777 -R front
           cat <<EOL > front/.env 
