--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs: 
-  diretory-print:
+  build-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout  
@@ -32,7 +32,7 @@ jobs:
       
             datasource:
               driver-class-name: com.mysql.cj.jdbc.Driver
-              url:  jdbc:mysql://${{ secrets.VM_PUBLIC_IP }}:3306/${{ secrets.DATABASE_NAME }}
+              url:  jdbc:mysql://${{ secrets.VM_HOST }}:3306/${{ secrets.DATABASE_NAME }}
               username: ${{ secrets.DATABASE_USERNAME }}
               password: ${{ secrets.DATABASE_PASSWORD }}
       
@@ -40,3 +40,37 @@ jobs:
             secret: ${{ secrets.JWT_TOKEN }}
           EOL
           cat back/src/main/resources/application-secret.yml
+
+      - name: print-directory
+        run: |
+          ls -a front
+          ls -a back/src/main/resources
+
+      - name: DockerHub-LOGIN
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build-And-Push-React-App
+        run: |
+          cd front
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/make-fitness-react-app .
+          docker push ${{ secrets.DOCKER_USERNAME }}/make-fitness-react-app:latest
+          
+      - name: Build-And-Push-Spring-App
+        run: |
+          cd back
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/make-fitness-spring-app .
+          docker push ${{ secrets.DOCKER_USERNAME }}/make-fitness-spring-app:latest
+  deploy:
+    needs: build-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: ssh
+        uses: appleboy/ssh-action@v1.0.3
+        with: 
+          host: ${{ secrets.VM_PUBLIC_IP }}
+          username: ubuntu
+          key: ${{ secrets.SSH_KEY }}
+        
+      
