--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -47,6 +47,7 @@ jobs:
           ls -a back/src/main/resources
 
       - name: DockerHub-LOGIN
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -72,5 +73,10 @@ jobs:
           host: ${{ secrets.VM_PUBLIC_IP }}
           username: ubuntu
           key: ${{ secrets.SSH_KEY }}
-        
+          script: |
+            sudo docker pull ${{ DOCKER_USERNAME }}/make-fitness-react-app:latest
+            sudo docker pull ${{ DOCKER_USERNAME }}/make-fitness-spring-app:latest
+            cd /home/ubuntu//project
+            sudo docker-compose -f project-compose.yml down
+            sudo docker-compose -f project-compose.yml up -d
       
