--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -74,8 +74,8 @@ jobs:
           username: ubuntu
           key: ${{ secrets.SSH_KEY }}
           script: |
-            sudo docker pull ${{ DOCKER_USERNAME }}/make-fitness-react-app:latest
-            sudo docker pull ${{ DOCKER_USERNAME }}/make-fitness-spring-app:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/make-fitness-react-app:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/make-fitness-spring-app:latest
             cd /home/ubuntu//project
             sudo docker-compose -f project-compose.yml down
             sudo docker-compose -f project-compose.yml up -d
