--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -57,7 +57,7 @@ jobs:
           ls -a
           cd front
           ls -a
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/make-fitness-react-app .
+          docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/make-fitness-react-app .
           docker push ${{ secrets.DOCKER_USERNAME }}/make-fitness-react-app:latest
           
       - name: Build-And-Push-Spring-App
